--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,16 @@ jobs:
     env:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
+      AWS_ACCESS_KEY_ID: "root"
+      AWS_SECRET_ACCESS_KEY: "password"
+      AWS_REGION: "us-east-1"
+
+      S3_ENDPOINT_URL: "localhost:9000"
+      S3_USE_SSL: false
+      S3_URL_STYLE: "path"
+  
+      
+
     name: Test & Build
     runs-on: ubuntu-latest
     timeout-minutes: 10
@@ -16,6 +26,11 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+
+      - name: Setup minio
+        run: |
+          docker run -d -p 9000:9000 --name minio -e "MINIO_ROOT_USER=root" -e "MINIO_ROOT_PASSWORD=password" -v /tmp/data:/data -v /tmp/config:/root/.minio minio/minio server /data
+  
 
       - name: Set up pnpm
         uses: pnpm/action-setup@v4
@@ -53,9 +68,6 @@ jobs:
 
       - name: Run tests
         run: pnpm test:ci
-
-      - name: Build storybook
-        run: pnpm storybook:build
 
       - name: Build package
         run: pnpm build
