--- a/package.json
+++ b/package.json
@@ -1,16 +1,31 @@
 {
-	"name": "typescript-react-package-starter",
-	"description": "",
+	"name": "s3-mutex",
+	"description": "A robust distributed locking mechanism for Node.js applications using AWS S3 as the backend storage, with support for deadlock detection, timeout handling, automatic lock refresh, retry with backoff, and cleanup utilities.",
 	"version": "0.0.0",
-	"author": "",
-	"license": "",
-	"keywords": [],
+	"author": "Tim Mikeladze <tim.mikeladze@gmail.com>",
+	"license": "MIT",
+	"keywords": [
+		"s3",
+		"mutex",
+		"distributed",
+		"locking",
+		"aws",
+		"s3-mutex",
+		"deadlock",
+		"timeout",
+		"heartbeat",
+		"retry",
+		"backoff",
+		"jitter",
+		"node",
+		"typescript"
+	],
 	"repository": {
 		"type": "git",
-		"url": ""
+		"url": "https://github.com/TimMikeladze/s3-mutex"
 	},
 	"scripts": {
-		"dev": "concurrently \"pnpm build --watch\" \"pnpm storybook\" \"pnpm test\" ",
+		"dev": "concurrently \"pnpm build --watch\" \"pnpm test\" ",
 		"build": "tsup",
 		"lint": "biome check --write --unsafe .",
 		"lint:ci": "biome check --unsafe .",
@@ -54,41 +69,38 @@
 		"@biomejs/biome": "1.9.4",
 		"@ryansonshine/commitizen": "4.2.8",
 		"@ryansonshine/cz-conventional-changelog": "3.3.4",
-		"@storybook/addon-essentials": "8.6.8",
-		"@storybook/addon-interactions": "8.6.8",
-		"@storybook/addon-links": "8.6.8",
+		"@storybook/addon-essentials": "8.6.12",
+		"@storybook/addon-interactions": "8.6.12",
+		"@storybook/addon-links": "8.6.12",
 		"@storybook/addon-webpack5-compiler-swc": "3.0.0",
-		"@storybook/blocks": "8.6.8",
-		"@storybook/react": "8.6.8",
-		"@storybook/react-webpack5": "8.6.8",
-		"@storybook/test": "8.6.8",
+		"@storybook/blocks": "8.6.12",
+		"@storybook/react": "8.6.12",
+		"@storybook/react-webpack5": "8.6.12",
+		"@storybook/test": "8.6.12",
 		"@testing-library/jest-dom": "6.6.3",
-		"@testing-library/react": "16.2.0",
-		"@types/node": "22.13.11",
-		"@types/react": "18.3.13",
-		"@types/react-dom": "18.3.1",
-		"@types/react-test-renderer": "18.3.0",
-		"@vitest/coverage-v8": "3.0.9",
+		"@testing-library/react": "16.3.0",
+		"@types/node": "22.15.3",
+		"@types/react": "19.1.2",
+		"@types/react-dom": "19.1.3",
+		"@types/react-test-renderer": "19.1.0",
+		"@vitest/coverage-v8": "3.1.2",
 		"concurrently": "9.1.2",
-		"dotenv": "^16.4.7",
-		"jsdom": "26.0.0",
-		"lefthook": "1.11.3",
+		"dotenv": "^16.5.0",
+		"jsdom": "26.1.0",
+		"lefthook": "1.11.12",
+		"minio": "^8.0.5",
 		"prop-types": "15.8.1",
-		"react": "18.3.1",
-		"react-dom": "18.3.1",
-		"react-test-renderer": "18.3.1",
-		"release-it": "18.1.2",
-		"storybook": "8.6.8",
+		"react": "19.1.0",
+		"react-dom": "19.1.0",
+		"react-test-renderer": "19.1.0",
+		"release-it": "19.0.1",
+		"storybook": "8.6.12",
 		"ts-node": "10.9.2",
 		"tsconfig-paths": "4.2.0",
 		"tsup": "8.4.0",
-		"tsx": "4.19.3",
-		"typescript": "5.8.2",
-		"vitest": "3.0.9"
-	},
-	"peerDependencies": {
-		"react": ">=17",
-		"react-dom": ">=17"
+		"tsx": "4.19.4",
+		"typescript": "5.8.3",
+		"vitest": "3.1.2"
 	},
 	"pnpm": {
 		"overrides": {
@@ -100,5 +112,8 @@
 			"esbuild",
 			"lefthook"
 		]
+	},
+	"dependencies": {
+		"@aws-sdk/client-s3": "^3.802.0"
 	}
 }
